# libapache2_mod_authz_zakautho

./: .gitignore  Makefile.am  autogen.sh  configure.ac
debian/: apache2  authz_zakautho.load  changelog  control  copyright  gbp.conf  libapache2-mod-authz-zakautho.install  rules
debian/patches/: 0001-autogen.sh-aclocal-missing-I.patch  0002-Forced-glib-type-init.patch  0003-Apache-old-api.patch  series
src/: Makefile.am  mod_authz_zakautho.c
